--- a/package.json
+++ b/package.json
@@ -2,11 +2,18 @@
   "name": "test-project",
   "version": "1.0.0",
   "description": "A simple JavaScript project",
-  "main": "main.js",
-  "scripts": {
-    "start": "node main.js"
-  },
   "type": "module",
+  "scripts": {
+    "start": "node --experimental-specifier-resolution=node dist/main.js",
+    "build": "tsc",
+    "dev": "tsc --watch",
+    "tsx": "tsx src/main.ts"
+  },
+  "devDependencies": {
+    "@types/node": "^20.4.2",
+    "tsx": "^4.20.3",
+    "typescript": "^5.1.6"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC"
